--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 body {
-  background-color: gray;
+  background-color: black;
   font-family: "Mulish";
 }
 
@@ -34,9 +34,8 @@ img {
   display: flex;
   justify-content: center;
   align-items: center;
-   
 }
-.container{ 
+.container {
   width: 1600px;
   padding-left: 80px;
   padding-right: 80px;
@@ -54,17 +53,15 @@ header {
   font-family: "Lemon", cursive;
   font-weight: 400;
   font-size: 40px;
-  
+
   color: #ffffff;
   border-radius: 14px;
   border: 4px solid transparent;
-  background: linear-gradient(#000,#000) padding-box, linear-gradient(132.88deg, #326CFF 3.44%, #26FFF2 100%);
+  background: linear-gradient(#000, #000) padding-box,
+    linear-gradient(132.88deg, #326cff 3.44%, #26fff2 100%);
   width: 70px;
   height: 70px;
- margin-right: 14px;
-
-  
-  
+  margin-right: 14px;
 }
 
 .logo-link {
@@ -73,34 +70,59 @@ header {
   font-weight: 500;
   font-size: 40px;
   color: #ffffff;
- 
 }
 
 .menu {
   font-weight: 700;
   font-size: 16px;
   line-height: 1.25;
-  
+
   padding-top: 25px;
   padding-bottom: 25px;
   margin-left: 40px;
   gap: 50px;
-  
 }
+
 .menu-item {
   opacity: 0.5;
+  position: relative;
 }
+
+.menu-item:hover:after {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  background: linear-gradient(316.53deg, #26fff2 13.2%, #326cff 71.54%);
+  border-radius: 50px;
+
+  -webkit-animation: my-animation 1s cubic-bezier(0.25, 0.46, 0.45, 0.94)
+    infinite;
+  animation: my-animation 1s cubic-bezier(0.25, 0.46, 0.45, 0.94) infinite;
+}
+
 .menu-item:is(:hover, :focus) {
   color: #ffffff;
   opacity: 1;
 }
+
 .head-icons {
-  gap:93px;
+  gap: 93px;
+}
+
+.icon-btn {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+}
+
+.head-icon {
+  fill: #ffffff;
 }
 
 .link {
   color: #ffffff;
-
 }
 
 /* ***************HERO*************** */
@@ -111,3 +133,28 @@ header {
   display: inline-block;
 }
 /*==========FUTURE====================*/
+
+@-webkit-keyframes my-animation {
+  0% {
+    opacity: 1;
+  }
+  60% {
+    opacity: 0.8;
+  }
+  100% {
+    letter-spacing: 1em;
+    opacity: 0;
+  }
+}
+@keyframes my-animation {
+  0% {
+    opacity: 1;
+  }
+  60% {
+    opacity: 0.8;
+  }
+  100% {
+    letter-spacing: 1em;
+    opacity: 0;
+  }
+}
